fixed cloudformation script

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,6 @@
     <title>Flask Docker</title>
 </head>
 <body>
-    <h1>Hello World, my name is Vasu Dev</h1>
+    <h1>Hello Udacity, my name is Vasu Dev</h1>
 </body>
 </html>
